# bw-weekend-bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  bot.py  docker-compose.yaml  handlers.py  main.py  pyproject.toml  settings.py  utils.py
.github/workflows/: pyci.yml
content/: __init__.py  location.py  main_menu.py  schedule.py  states.py
content/data/: main.yaml
docs/: api.md  architecture.md  user_guide.md
old/: bot.py  docker-compose.yaml  handlers.py  main.py  pyproject.toml  utils.py
old/content/: location.py  main_menu.py  schedule.py  states.py
scripts/: validate_content.py
src/: config.py
src/application/: button_helper.py  keyboard_helper.py
src/application/adapters/: base.py  telegram_adapter.py
src/application/services/: __init__.py  message_sender.py  navigation.py  telegram_message_sender.py  vk_message_sender.py
src/application/usecases/: get_content.py  navigate.py  start_conversation.py
src/domain/: __init__.py  aggregates.py  domain.py  exceptions.py  factories.py
src/domain/aggregates/: __init__.py  menu_node.py  post.py  post_group.py  post_node.py
src/domain/entities/: __init__.py  button_type.py  keyboard.py  keyboard_button.py  media_group.py  node_kind.py  user_session.py
src/domain/factories/: __init__.py  content_factory.py  media_factory.py  node_factory.py
src/domain/ports/: __init__.py  content_repository.py  media_cache.py  state_store.py
src/domain/value_objects/: button.py  buttons.py  cache.py  keyboard.py  media.py  menu_node_flags.py  network.py  node.py  nodes.py  post_flag.py  user_key.py  user_session.py
src/infrastructure/: content_repository.py  exceptions.py  file_provider.py  state_store.py
src/infrastructure/file_cache/: __init__.py  base.py  exceptions.py  in_memory.py  memory_cache.py  sqlite.py  sqlite_cache.py
src/infrastructure/state_store/: __init__.py  base.py  memory_store.py  sqlite_store.py
src/presentation/: entrypoint.py  entrypoint_telegram.py  entrypoint_vk.py  telegram_adapter.py  telegram_router.py  vk_adapter.py  vk_labeler.py
tests/: conftest.py  file_cache_test.py  validate_content_test.py
tests/unit/application/: button_helper_test.py
tests/unit/domain/: content_factory_test.py  media_factory_test.py  user_session_test.py
tests/unit/infrastructure/: content_repository_test.py  file_cache_test.py  file_provider_test.py  memory_cache_test.py  memory_store_test.py  sqlite_cache_test.py  sqlite_store_test.py  (+1 more)
(+48 files in other folders)
