[project]
name = "bw-weekend-bot"
version = "0.1.0"
description = "Bot for BW Weekend festival"
authors = [{name = "Kokuev Mikhail"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.13.4",
    "ruamel-yaml>=0.19.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "scripts"]

[project.scripts]
validate-content = "scripts.validate_content:run"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
preview = true
select = ["E", "F", "I", "C90"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
