[project]
name = "bw-weekend-bot"
version = "0.1.0"
description = "Bot for BW Weekend festival"
authors = [{name = "Kokuev Mikhail"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.28.2",
    "aiosqlite>=0.22.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyyaml>=6.0.3",
    "ruamel-yaml>=0.19.1",
    "vkbottle>=4.8.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-env>=1.6.0",
    "ruff>=0.15.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "scripts"]

[project.scripts]
validate-content = "scripts.validate_content:run"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
preview = true
select = ["E", "F", "I", "C90"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest_env]
BOT_TOKEN_TELEGRAM = "123456789:ABCDEFGHIJKLMNOPQRSTUVWXYZ"
TELEGRAM_WEBHOOK_URL = "http://localhost:8000/webhook"
TELEGRAM_WEBHOOK_SECRET = "secret"
TELEGRAM_WEBHOOK_PATH = "/webhook"
WEB_SERVER_HOST = "0.0.0.0"
WEB_SERVER_PORT = 8000
